# render3d

./: .gitignore  Cargo.toml  README.md  justfile
benches/: ray_tracing.rs
src/: action.rs  fps.rs  lib.rs  main.rs  time.rs  vector.rs
src/ray_tracing/: action.rs  mod.rs  vector.rs
www/: ray-tracing.html
