[package]
description = "一些简单的手搓 3D 示例."
edition = "2024"
name = "render3d"
readme = "README.md"
repository = "https://github.com/azazo1/render3d/"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "render3d"

[dependencies]
axum = {version = "0.8.7", optional = true}
clap = {version = "4.5.53", optional = true, features = ["derive"]}
futures = "0.3.31"
getrandom = {version = "0.3.4", features = ["wasm_js"]}
mime_guess = "2.0.5"
minifb = "0.28.0"
rand = "0.9.2"
rayon = "1.11.0"
tokio = {version = "1.48.0", features = ["fs", "io-util", "net", "rt-multi-thread"], optional = true}
tokio-util = {version = "0.7.17", features = ["io"], optional = true}
tracing = {version = "0.1.41", optional = true}
tracing-subscriber = {version = "0.3.20", optional = true}
wasm-bindgen = "0.2.105"

[[bin]]
name = "ray_tracing"
path = "src/bin/ray_tracing.rs"

[[bin]]
name = "wasm_server"
path = "src/bin/wasm_server.rs"
required-features = ["wasm_server"]

[features]
wasm_server = ["axum", "tokio", "clap", "tracing", "tracing-subscriber", "tokio-util"]
